src/components/burger.module.css
@value colors: "../theme/colors.css";
@value white from colors;

.styledBurger {
  position: fixed;
  top: 32px;
  right: 32px;
  left: auto;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  width: 2rem;
  height: 2rem;
  background: transparent;
  border: none;
  cursor: pointer;
  padding: 0;
  z-index: 10;
  transition: transform 0.2s ease;
}

.styledBurger:hover {
  transform: scale(1.1);
  box-shadow: none;
}

.styledBurger div {
  width: 2rem;
  height: 0.2rem;
  background: white;
  border-radius: 10px;
  transition: all 0.3s cubic-bezier(0.16, 1, 0.3, 1);
  position: relative;
  transform-origin: right;
}

.upperLine {
  transform: rotate(0deg);
}

.openedUpperLine {
  transform: rotate(-45deg);
}

.lowerLine {
  transform: rotate(0deg);
}

.openedLowerLine {
  transform: rotate(45deg);
}

.styledBurger:focus {
  outline: none;
}

